--- a/index.html
+++ b/index.html
@@ -9930,7 +9930,7 @@ Error message and password prompt
 <div created="20200827081427276" modified="20200827081427276" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
 <pre>fluid-fixed</pre>
 </div>
-<div created="20200826124733722" modified="20200827082013932" tags="" title="ARMv7-m branching decipher on STM32L4 mcu">
+<div created="20200826124733722" modified="20200827084029821" tags="" title="ARMv7-m branching decipher on STM32L4 mcu">
 <pre>Following command 
 
 ''arm-none-eabi-objdump.exe  -d stm32l452_rmk4.elf
@@ -9984,6 +9984,12 @@ gives full disassembly of the binary :
 .
 .
 ```
+
+Instruction at address ''8004a46'' contains branch to  function ''LoopCopyDataInit''
+The address of first instruction in function ''LoopCopyDataInit'' is relative to the 
+''branch'' instruction it self i.e. to address ''8004a46''.  The value ''e003'' stored at 
+address ''8004a46'' based on &quot;ARM®v7-M Architecture
+Reference Manual&quot; says following 
 
 
 </pre>
