--- a/index.html
+++ b/index.html
@@ -9756,7 +9756,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200827081646419" list="$:/Import [[BLE Throughput]] [[ARMv7-m branching decipher on STM32L4 mcu]] GettingStarted" modified="20200827081748998" title="$:/StoryList">
+<div created="20200827081646419" list="$:/Import t2_encoding.PNG [[BLE Throughput]] [[ARMv7-m branching decipher on STM32L4 mcu]] GettingStarted" modified="20200827130017152" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9939,7 +9939,7 @@ Error message and password prompt
 <div created="20200827081427276" modified="20200827081427276" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
 <pre>fluid-fixed</pre>
 </div>
-<div created="20200826124733722" modified="20200827115325692" tags="" title="ARMv7-m branching decipher on STM32L4 mcu">
+<div created="20200826124733722" modified="20200827130142631" tags="" title="ARMv7-m branching decipher on STM32L4 mcu">
 <pre>Following command 
 
 ''arm-none-eabi-objdump.exe  -d stm32l452_rmk4.elf
@@ -9961,6 +9961,13 @@ gives full disassembly of the binary :
 
 `8004a46:       e003            b.n     8004a50 &lt;LoopCopyDataInit&gt;`
 
+Instruction at address ''8004a46'' contains branch to  function ''LoopCopyDataInit''
+The address of first instruction in function ''LoopCopyDataInit'' is relative to the 
+''branch'' instruction it self i.e. to address ''8004a46''.  The value ''e003'' stored at 
+address ''8004a46'' based on &quot;ARM®v7-M Architecture
+Reference Manual&quot; says following 
+
+{{t2_encoding.PNG}}
 
 ```
 08004a48 &lt;CopyDataInit&gt;:
@@ -9993,13 +10000,6 @@ gives full disassembly of the binary :
 .
 .
 ```
-
-Instruction at address ''8004a46'' contains branch to  function ''LoopCopyDataInit''
-The address of first instruction in function ''LoopCopyDataInit'' is relative to the 
-''branch'' instruction it self i.e. to address ''8004a46''.  The value ''e003'' stored at 
-address ''8004a46'' based on &quot;ARM®v7-M Architecture
-Reference Manual&quot; says following 
-
 
 </pre>
 </div>
