--- a/index.html
+++ b/index.html
@@ -9758,7 +9758,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200827081646419" list="$:/Import [[BLE Throughput]] [[ARMv7-m branching decipher on STM32L4 mcu]] GettingStarted" modified="20200827130017152" title="$:/StoryList">
+<div created="20200827081646419" list="[[BLE Throughput]] [[ARMv7-m branching decipher on STM32L4 mcu]] GettingStarted" modified="20200827130017152" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9941,7 +9941,7 @@ Error message and password prompt
 <div created="20200827081427276" modified="20200827081427276" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
 <pre>fluid-fixed</pre>
 </div>
-<div created="20200826124733722" modified="20200827133100425" tags="" title="ARMv7-m branching decipher on STM32L4 mcu">
+<div created="20200826124733722" modified="20200827133308064" tags="" title="ARMv7-m branching decipher on STM32L4 mcu">
 <pre>Following command 
 
 ''arm-none-eabi-objdump.exe  -d stm32l452_rmk4.elf
@@ -9964,7 +9964,7 @@ gives full disassembly of the binary :
 `8004a46:       e003            b.n     8004a50 &lt;LoopCopyDataInit&gt;`
 
 
-In &quot;ARM®v7-M Architecture Reference Manual&quot;  page A5.2 in the list of 16-bit Thumb instruction encoding it is said:
+In ''ARM®v7-M Architecture Reference Manual'' on  page A5.2 in the list of 16-bit Thumb instruction encoding it is said:
 
 {{unconditional_branch.PNG}}
 
