--- a/index.html
+++ b/index.html
@@ -9941,7 +9941,7 @@ Error message and password prompt
 <div created="20200827081427276" modified="20200827081427276" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
 <pre>fluid-fixed</pre>
 </div>
-<div created="20200826124733722" modified="20200827133308064" tags="" title="ARMv7-m branching decipher on STM32L4 mcu">
+<div created="20200826124733722" modified="20200827135110409" tags="" title="ARMv7-m branching decipher on STM32L4 mcu">
 <pre>Following command 
 
 ''arm-none-eabi-objdump.exe  -d stm32l452_rmk4.elf
@@ -9980,9 +9980,18 @@ The syntax of the following instructions includes a label:
 the instruction that they branch to. Their encodings specify a sign-extended immediate offset that is
 added to the PC value of the instruction to form the target address of the branch.
 
-So the immediate is the offset, relative to the address ''8004a46'' of the instruction ''e003''
+So the immediate is the offset, relative to the address ''8004a46'' of the instruction ''e003''.
+
 In addition in A4.2.2 stated: ''The PC value of an instruction is its address
 plus 4 for a Thumb instruction''
+
+Taking it all together in order to calculate the address of the function we are branching to, 
+we should add 4 to the address of the current instruction and add the immediate multiplied by 
+size of each instruction which is 2 as we in thumb mode :
+
+''8004a46 + 4 + 3*2 = 08004a50''
+
+which is the offset of ''LoopCopyDataInit''
 
 ```
 08004a48 &lt;CopyDataInit&gt;:
