--- a/index.html
+++ b/index.html
@@ -9758,7 +9758,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200827081646419" list="[[BLE Throughput]] [[ARMv7-m branching decipher on STM32L4 mcu]] GettingStarted" modified="20200827130017152" title="$:/StoryList">
+<div created="20200827135654158" list="[[ARMv7-m branching decipher on STM32L4 mcu]] GettingStarted" modified="20200827135654158" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9774,7 +9774,7 @@ Error message and password prompt
         },
         &quot;$:/info/startup-timestamp&quot;: {
             &quot;title&quot;: &quot;$:/info/startup-timestamp&quot;,
-            &quot;text&quot;: &quot;20200827081641096&quot;
+            &quot;text&quot;: &quot;20200827135642872&quot;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
@@ -9941,7 +9941,7 @@ Error message and password prompt
 <div created="20200827081427276" modified="20200827081427276" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
 <pre>fluid-fixed</pre>
 </div>
-<div created="20200826124733722" modified="20200827135322044" tags="" title="ARMv7-m branching decipher on STM32L4 mcu">
+<div created="20200826124733722" modified="20200827135838042" tags="" title="ARMv7-m branching decipher on STM32L4 mcu">
 <pre>Following command 
 
 ''arm-none-eabi-objdump.exe  -d stm32l452_rmk4.elf
@@ -9972,13 +9972,18 @@ So the ''e'' from ''e003'' means unconditional branch. And from page A6-10
 
 {{t2_encoding.PNG}}
 
-it follows that ''3'' is the immediate. At ''A4.2.2 Use of labels in UAL syntax''
-stated following:
+it follows that ''3'' is the immediate. 
 
+At ''A4.2.2 Use of labels in UAL syntax'' stated following:
+
+
+&lt;&lt;&lt;
 The syntax of the following instructions includes a label:
 • B, BL, and BLX (immediate). The assembler syntax for these instructions always specifies the label of
 the instruction that they branch to. Their encodings specify a sign-extended immediate offset that is
 added to the PC value of the instruction to form the target address of the branch.
+&lt;&lt;&lt;
+
 
 So the immediate is the offset, relative to the address ''8004a46'' of the instruction ''e003''.
 
