--- a/index.html
+++ b/index.html
@@ -9710,8 +9710,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20200830132650048" modified="20200830132906921" title="$:/DefaultTiddlers">
-<pre>GettingStarted</pre>
+<div created="20200830132650048" modified="20200830133122362" title="$:/DefaultTiddlers">
+<pre>[tag[start]]</pre>
 </div>
 <div created="20200812124034496" modified="20200812134534324" title="$:/GitHub/Filename">
 <pre>index.html</pre>
@@ -9763,7 +9763,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200830132533535" list="$:/ControlPanel GettingStarted" modified="20200830132533535" title="$:/StoryList">
+<div list="$:/ControlPanel GettingStarted" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9779,7 +9779,7 @@ Error message and password prompt
         },
         &quot;$:/info/startup-timestamp&quot;: {
             &quot;title&quot;: &quot;$:/info/startup-timestamp&quot;,
-            &quot;text&quot;: &quot;20200830062931253&quot;
+            &quot;text&quot;: &quot;20200830133026274&quot;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
