--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ Error message and password prompt
 
 <li>Bluetooth wiki</li>
 
-<li>Draft of 'New Tiddler'</li>
+<li>Reactance, capacity</li>
 
 <li>t2_encoding.PNG</li>
 
@@ -9750,8 +9750,8 @@ Error message and password prompt
 <div created="20200827080847578" modified="20200827080847578" title="$:/state/tab--1963855381">
 <pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
 </div>
-<div created="20200812123434981" modified="20200830132634552" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Info</pre>
+<div created="20200812123434981" modified="20200910103312733" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
 <div created="20200812123450621" modified="20200812123450621" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -9765,7 +9765,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div list="" title="$:/StoryList">
+<div created="20200910103241673" list="$:/ControlPanel [[Reactance, capacity]]" modified="20200910103308131" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9781,7 +9781,7 @@ Error message and password prompt
         },
         &quot;$:/info/startup-timestamp&quot;: {
             &quot;title&quot;: &quot;$:/info/startup-timestamp&quot;,
-            &quot;text&quot;: &quot;20200910102928872&quot;
+            &quot;text&quot;: &quot;20200910103121373&quot;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
@@ -9817,11 +9817,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;412&quot;
+            &quot;text&quot;: &quot;1920&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;869&quot;
+            &quot;text&quot;: &quot;1080&quot;
         },
         &quot;$:/info/browser/language&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/language&quot;,
@@ -10052,7 +10052,7 @@ https://devzone.nordicsemi.com/f/nordic-q-a/254/streaming-data-over-ble-nrf8001-
 
 BLE represents a trade-off between energy consumption, latency, piconet size, and throughput that mainly depends on parameters such as connInterval and connSlaveLatency. </pre>
 </div>
-<div created="20200902162941894" draft.of="New Tiddler" draft.title="Reactance, capacity" modified="20200902163004490" tags="" title="Draft of 'New Tiddler'">
+<div created="20200902162941894" modified="20200910103244822" tags="" title="Reactance, capacity">
 <pre>Angular frequency ω (in radians per second), is larger than frequency ν (in cycles per second, also called Hz), by a factor of 2π</pre>
 </div>
 <div title="t2_encoding.PNG" type="image/png">
