--- a/index.html
+++ b/index.html
@@ -9950,7 +9950,7 @@ Error message and password prompt
 <div created="20200827081427276" modified="20200827081427276" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
 <pre>fluid-fixed</pre>
 </div>
-<div created="20200910104228987" modified="20200910111812467" tags="" title="Add SEGGER SystemView in an arm target in IAR 7.40">
+<div created="20200910104228987" modified="20200910111926642" tags="" title="Add SEGGER SystemView in an arm target in IAR 7.40">
 <pre>STM32L486 chip, bsp generated with CubeMX with FreeRTOS 
 IAR workbench 7.40
 
@@ -9977,10 +9977,8 @@ and the FreeRTOSConfig.h  the  #include &quot;SEGGER_SYSVIEW_FreeRTOS.h&quot; su
 
 
 !! ^^#ifndef ASM^^
-
-  ^^#include &quot;SEGGER_SYSVIEW_FreeRTOS.h&quot;^^
-
-^^#endif^^
+!!     ^^#include &quot;SEGGER_SYSVIEW_FreeRTOS.h&quot;^^
+!! ^^#endif^^
 
 so only compiler parses the SEGGER_SYSVIEW_FreeRTOS.h, not the assembler
 
