--- a/index.html
+++ b/index.html
@@ -9950,7 +9950,7 @@ Error message and password prompt
 <div created="20200827081427276" modified="20200827081427276" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
 <pre>fluid-fixed</pre>
 </div>
-<div created="20200910104228987" modified="20200910114739014" tags="" title="Add SEGGER SystemView in an arm target in IAR 7.40">
+<div created="20200910104228987" modified="20200910114920861" tags="" title="Add SEGGER SystemView in an arm target in IAR 7.40">
 <pre>STM32L486 chip, bsp generated with CubeMX with FreeRTOS 
 IAR workbench 7.40
 
@@ -9974,8 +9974,9 @@ Error while running Assembler
 This one I did not manage to solve, so I came with a workaround.
 In the FreeRTOSConfig.h  surround the  #include &quot;SEGGER_SYSVIEW_FreeRTOS.h&quot; with
 
+#if defined(__ICCARM__) || defined(__CC_ARM) || defined(__GNUC__)
 
-!! ^^#if defined(__ICCARM__) || defined(__CC_ARM) || defined(__GNUC__)^^
+ ^^#if defined(__ICCARM__) || defined(__CC_ARM) || defined(__GNUC__)^^
 !!     ^^#include &quot;SEGGER_SYSVIEW_FreeRTOS.h&quot;^^
 !! ^^#endif^^
 
