--- a/index.html
+++ b/index.html
@@ -10089,8 +10089,19 @@ https://devzone.nordicsemi.com/f/nordic-q-a/254/streaming-data-over-ble-nrf8001-
 
 BLE represents a trade-off between energy consumption, latency, piconet size, and throughput that mainly depends on parameters such as connInterval and connSlaveLatency. </pre>
 </div>
-<div created="20200902162941894" modified="20200910103850177" tags="" title="Reactance, capacity">
+<div created="20200902162941894" modified="20200910115435166" tags="" title="Reactance, capacity">
 <pre>Angular frequency ω (in radians per second), is larger than frequency ν (in cycles per second, also called Hz), by a factor of 2π
+
+The term angular frequency vector {\displaystyle {\vec {\omega }}}{\vec {\omega }} is sometimes used as a synonym for the vector quantity angular velocity.[1]
+
+One revolution is equal to 2π radians, hence[1][2]
+
+{\displaystyle \omega ={{2\pi } \over T}={2\pi f},}\omega ={{2\pi } \over T}={2\pi f},
+where:
+
+ω is the angular frequency or angular speed (measured in radians per second),
+T is the period (measured in seconds),
+f is the ordinary frequency (measured in hertz) (sometimes symbolised with ν).
 
 As the capacitor charges or discharges, a current flows through it which is restricted by the internal impedance of the capacitor. This internal impedance is commonly known as Capacitive Reactance and is given the symbol XC in Ohms.</pre>
 </div>
