--- a/index.html
+++ b/index.html
@@ -9950,23 +9950,28 @@ Error message and password prompt
 <div created="20200827081427276" modified="20200827081427276" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
 <pre>fluid-fixed</pre>
 </div>
-<div created="20200910104228987" modified="20200913084956548" tags="" title="Add SEGGER SystemView in an arm target in IAR 7.40">
+<div created="20200910104228987" modified="20200913085109292" tags="" title="Add SEGGER SystemView in an arm target in IAR 7.40">
 <pre>STM32L486 chip, bsp generated with CubeMX with FreeRTOS 
 IAR workbench 7.40
 
-FreeRTOS has hooks for diagnostics support. Macros like : traceTASK_NOTIFY_TAKE, traceTASK_DELAY and so on.... Those defined in FreeRTOS.h file
-and redefined by Segger SystemView with actual implementation in SEGGER_SYSVIEW_FreeRTOS.h, so in SystemView deployment instructions it is 
+FreeRTOS has hooks for diagnostics support. Macros like : traceTASK_NOTIFY_TAKE, traceTASK_DELAY and so on.... 
+Those defined in FreeRTOS.h file and redefined by Segger SystemView with actual implementation 
+in SEGGER_SYSVIEW_FreeRTOS.h, so in SystemView deployment instructions it is stated :
 
 &lt;&lt;&lt;
-stated : At the end of FreeRTOSConfig.h or before every FreeRTOS.h add #include &quot;SEGGER_SYSVIEW_FreeRTOS.h&quot;
+ At the end of FreeRTOSConfig.h or before every FreeRTOS.h add #include &quot;SEGGER_SYSVIEW_FreeRTOS.h&quot;
 &lt;&lt;&lt;
 
 
 Following this instruction in IAR 7.40 results for me with following issue: 
 
+
+&lt;&lt;&lt;
 portasm.s 
 Error[2]: Failed to open #include file 'SEGGER_SYSVIEW_FreeRTOS.h' ....\Inc\FreeRTOSConfig.h 
 Error while running Assembler 
+
+&lt;&lt;&lt;
 
 That is because in the FreeRTOSConfig.h is included in portasm.s of freertos, so just like the compiler, it is required to set the include path for 
 assembler so it can find the file. After relevant paths were added in the preprocessor tab, of the assembler category, following issue appeared:
