--- a/index.html
+++ b/index.html
@@ -9950,7 +9950,7 @@ Error message and password prompt
 <div created="20200827081427276" modified="20200827081427276" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
 <pre>fluid-fixed</pre>
 </div>
-<div created="20200910104228987" modified="20200913085258419" tags="" title="Add SEGGER SystemView in an arm target in IAR 7.40">
+<div created="20200910104228987" modified="20200913085424210" tags="" title="Add SEGGER SystemView in an arm target in IAR 7.40">
 <pre>STM32L486 chip, bsp generated with CubeMX with FreeRTOS 
 IAR workbench 7.40
 
@@ -9980,8 +9980,8 @@ Error while running Assembler
 
 &lt;&lt;&lt;
 
-That is because FreeRTOSConfig.h is included in portasm.s of freertos, so just like the compiler, the assembler also requires to set the include path for 
-so it can find the file. After relevant paths were added in the preprocessor tab, of the assembler category, following issue appeared:
+That is because FreeRTOSConfig.h is included in portasm.s of freertos, so just like the compiler, the assembler also requires to set the path to include file
+so it can be found. After relevant paths were added in the preprocessor tab, of the assembler category, following issue appeared:
 
 portasm.s 
 Error[2]: Failed to open #include file 'stdarg.h' .....\Middlewares\Third_Party\SystemView_Src_V252d\SEGGER\SEGGER.h 67 
