--- a/index.html
+++ b/index.html
@@ -195,6 +195,8 @@ Error message and password prompt
 
 <li>Add SEGGER SystemView in an arm target in IAR 7.40</li>
 
+<li>ADS1299</li>
+
 <li>ARMv7-m branching decipher on STM32L4 mcu</li>
 
 <li>BLE Throughput</li>
@@ -9767,7 +9769,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200913084829797" list="[[Add SEGGER SystemView in an arm target in IAR 7.40]]" modified="20200913084833478" title="$:/StoryList">
+<div created="20200921071644251" list="ADS1299 [[Reactance, capacity]]" modified="20200921071644251" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9783,7 +9785,7 @@ Error message and password prompt
         },
         &quot;$:/info/startup-timestamp&quot;: {
             &quot;title&quot;: &quot;$:/info/startup-timestamp&quot;,
-            &quot;text&quot;: &quot;20200913084825676&quot;
+            &quot;text&quot;: &quot;20200921071636946&quot;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
@@ -9999,6 +10001,15 @@ so only compiler parses the SEGGER_SYSVIEW_FreeRTOS.h, not the assembler
 
 
 
+</pre>
+</div>
+<div created="20200921071958207" modified="20200921072350520" tags="" title="ADS1299">
+<pre>The analog inputs to the device connect directly to an integrated low-noise, low-drift, high input impedance,
+programmable gain amplifier. ( high input impedance is important in order to vanish voltage divider effect. 
+For example, say we have a 10V signal with 1kΩ impedance.
+We connect this to a 1MΩ input, the input voltage will be 10V⋅1MΩ1MΩ+1kΩ=9.99V.
+If we reduce the input impedance to 10kΩ, we get 10V⋅10kΩ10kΩ+1kΩ=9.09V
+Reduce it to 1k and we get 10V⋅1kΩ1kΩ+1kΩ=5V )
 </pre>
 </div>
 <div created="20200826124733722" modified="20200827135904143" tags="" title="ARMv7-m branching decipher on STM32L4 mcu">
