--- a/index.html
+++ b/index.html
@@ -195,8 +195,6 @@ Error message and password prompt
 
 <li>Add SEGGER SystemView in an arm target in IAR 7.40</li>
 
-<li>ADS1299</li>
-
 <li>ARMv7-m branching decipher on STM32L4 mcu</li>
 
 <li>BLE Throughput</li>
@@ -9769,7 +9767,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20200921071644251" list="ADS1299 [[Reactance, capacity]]" modified="20200921071644251" title="$:/StoryList">
+<div list="" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9785,7 +9783,7 @@ Error message and password prompt
         },
         &quot;$:/info/startup-timestamp&quot;: {
             &quot;title&quot;: &quot;$:/info/startup-timestamp&quot;,
-            &quot;text&quot;: &quot;20200921071636946&quot;
+            &quot;text&quot;: &quot;20200921072422177&quot;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
@@ -10001,15 +9999,6 @@ so only compiler parses the SEGGER_SYSVIEW_FreeRTOS.h, not the assembler
 
 
 
-</pre>
-</div>
-<div created="20200921071958207" modified="20200921072350520" tags="" title="ADS1299">
-<pre>The analog inputs to the device connect directly to an integrated low-noise, low-drift, high input impedance,
-programmable gain amplifier. ( high input impedance is important in order to vanish voltage divider effect. 
-For example, say we have a 10V signal with 1kΩ impedance.
-We connect this to a 1MΩ input, the input voltage will be 10V⋅1MΩ1MΩ+1kΩ=9.99V.
-If we reduce the input impedance to 10kΩ, we get 10V⋅10kΩ10kΩ+1kΩ=9.09V
-Reduce it to 1k and we get 10V⋅1kΩ1kΩ+1kΩ=5V )
 </pre>
 </div>
 <div created="20200826124733722" modified="20200827135904143" tags="" title="ARMv7-m branching decipher on STM32L4 mcu">
